--- a/config.toml
+++ b/config.toml
@@ -43,3 +43,10 @@ disableLiveReload = true
   changefreq = "monthly"
   priority = 0.5
   filename = "sitemap.xml"
+
+# Ignore Obsidian-specific folders (not content for Hugo)
+ignoreFiles = [
+  "^content/attachments/",
+  "^content/excalidraw/",
+  "^content/templates/"
+]
