feat: images path processing

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
-# pocketBase API Configuration
 # copy this file to .env and fill in your actual values
-POCKETBASE_SECRET_KEY=your-secret-key-here
-POCKETBASE_API_URL=https://api.arkr.ca/api/collections/arkr_manual_emails/records
+# pocketbase API Configuration
+POCKETBASE_SECRET_KEY=
+POCKETBASE_API_URL=
+
+# images.py file path config
+HUGO_POSTS_DIR=
+ATTACHMENTS_DIR=
+STATIS_IMAGES_DIR=
